crates/xlate/tests/snapshots/golden_matrix__reason_raw_reasoning_text__o4-mini__20260910__responses_to_chat__openai_compatible.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "llama-x",
  "messages": [
    {
      "role": "user",
      "content": "What is 9*9?"
    }
  ],
  "max_tokens": 256
}
--- headers ---
upstream_streams: false
--- degraded ---
reasoning=dropped;include=dropped
